# poem-openapi

./: Cargo.toml  README.md
.github/workflows/: release.yml
derive/: Cargo.toml
derive/src/: api.rs  common_args.rs  enum.rs  lib.rs  multipart.rs  object.rs  request.rs  response.rs  schema.rs  utils.rs  validators.rs
examples/: combined_apis.rs  hello_world.rs  multiple_apis.rs  upload.rs  users.rs
examples/auth/: Cargo.toml
examples/combined-apis/: Cargo.toml
examples/hello-world/: Cargo.toml
examples/mtcnn/: Cargo.toml  README.md
examples/mtcnn/src/: main.rs  mtcnn.rs
examples/upload/: Cargo.toml
examples/users-crud/: Cargo.toml
src/: base.rs  error.rs  lib.rs  openapi.rs
src/auth/: api_key.rs
src/param/: cookie.rs  header.rs  mod.rs  path.rs  query.rs
src/payload/: binary.rs  field.rs  json.rs  mod.rs  optional.rs  plain_text.rs  tempfile.rs
src/registry/: mod.rs  ser.rs
src/types/: base64_type.rs  binary.rs  error.rs  mod.rs  password.rs
src/types/multipart/: upload.rs
src/ui/: mod.rs
src/validation/: max_items.rs  max_length.rs  maximum.rs  min_items.rs  min_length.rs  minimum.rs  mod.rs  multiple_of.rs  pattern.rs
tests/: api.rs  enum.rs  hygiene.rs  multipart.rs  object.rs  operation_param.rs  request.rs  response.rs  schema.rs  security_scheme.rs  tags.rs  validation.rs
