[package]
name = "mtcnn"
version = "0.1.0"
edition = "2018"

[dependencies]
tensorflow = { version = "0.17.0", features = ["tensorflow_gpu"] }
image = "0.23"
imageproc = "0.22"
structopt = "0.3"
# actix-web = "3.3.2"
# futures = "0.3.17"
log = "0.4.14"
pretty_env_logger = "0.4.0"
serde_derive = "1.0.13"

poem-openapi = "0.3.2"
poem = { version = "0.5.5", features = ["multipart", "tempfile"] }

tokio = { version = "1.10.1", features = ["fs"] }
serde_json = "1.0.66"
base64 = "0.13.0"
serde = { version = "1.0.13", features = ["derive"] }
thiserror = "1.0.28"
askama = "0.10.5"
derive_more = "0.99.16"
num-traits = "0.2.14"
regex = "1.5.4"

# Feature optional dependencies
chrono = { version = "0.4.19", optional = true }

[dev-dependencies]
tokio = { version = "1.10.1", features = ["macros", "sync", "rt-multi-thread"] }
